--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
 <html>
-<body>
-
-<p>If your browser supports bi-directional override (bdo), the next line will be written from right to left (rtl):</p>
-
-<bdo dir="rtl">This line will be written from right to left</bdo>
-
+<head><title>Web_Site</title></heat>
+<body style="background-color:cyan;">
+<h1><marquee><b>DEMO WEBPAGE</b></marquee></h1>
+<h2><marquee><b>DEMO WEBPAGE</b></marquee></h2>
+<h3><marquee><b>DEMO WEBPAGE</b></marquee></h3>
+<h4><marquee><b>DEMO WEBPAGE</b></marquee></h4>
+<i>Connection from GITHUB </br>
+TO</br>
+S3 Bucket</br>
+And S3 bucket URL fetching using CLoudFront</t>
 </body>
 </html>
-
